# encoins-frontend

./: .gitignore  CHANGELOG.md  Caddyfile  DEV.md  GHCJS.md  README.md  build-frontend-dev.sh  build-frontend-html.sh  build-frontend.sh  build.sh  build_and_copy.sh  build_html.sh  build_js.sh  cabal.project  encoins-frontend.cabal  fourmolu.yaml  frontend-html.project  frontend.project  hie.yaml  run-dev.sh  run_dev.sh  utils.sh
apps/: DAO.hs  Html.hs
config/: bulletproof_setup.json
frontend/: encoins-frontend.cabal
frontend-html/: encoins-frontend-html.cabal
frontend-html/apps/: Html.hs
frontend/apps/: App.hs  DAO.hs  Website.hs
frontend/config/: backend_url.json  delegate_relay_amount.json  network_id_config.json
frontend/src/Backend/: EncoinsTx.hs  Environment.hs  Status.hs  Utility.hs  Wallet.hs
frontend/src/Backend/Protocol/: Fees.hs  Setup.hs  StrongTypes.hs  TxValidity.hs  Types.hs  Utility.hs
frontend/src/Backend/Servant/: Client.hs  Requests.hs
frontend/src/Config/: Config.hs
frontend/src/ENCOINS/: App.hs  DAO.hs  Website.hs
frontend/src/ENCOINS/App/: Body.hs
frontend/src/ENCOINS/App/Widgets/: Basic.hs  Cloud.hs  CloudWindow.hs  Coin.hs  ConnectWindow.hs  IPFS.hs  ISPO.hs  ImportWindow.hs  InputAddressWindow.hs  MainTabs.hs  MainWindow.hs  Migration.hs  MoreMenuWindow.hs  Navbar.hs  Notification.hs  PasswordWindow.hs  ReEncryption.hs  Save.hs  SendRequestButton.hs  SendToWalletWindow.hs  TabsSelection.hs  TransactionBalance.hs  WelcomeWindow.hs
frontend/src/ENCOINS/Common/: Cache.hs  Events.hs  Head.hs  Language.hs  Utils.hs
frontend/src/ENCOINS/Common/Widgets/: Advanced.hs  Basic.hs  Connect.hs  JQuery.hs  MoreMenu.hs  SelectInput.hs  Wallet.hs
frontend/src/ENCOINS/DAO/: Body.hs  PollResults.hs  Polls.hs
frontend/src/ENCOINS/DAO/Widgets/: DelegateWindow.hs  Navbar.hs  PollWidget.hs  RelayTable.hs  StatusWidget.hs
frontend/src/ENCOINS/DAO/Widgets/DelegateWindow/: RelayNames.hs
frontend/src/ENCOINS/Website/: Body.hs  Head.hs
frontend/src/ENCOINS/Website/Widgets/: Basic.hs  Footer.hs  ISPOPage.hs  LandingPage.hs  Navbar.hs  Resourses.hs
frontend/src/JS/: App.hs  DAO.hs  Website.hs
frontend/src/Reflex/: ScriptDependent.hs
frontend/test/: Spec.hs
js-src/: fingerprint.js
js-src/npm/: package-lock.json  package.json
result/: app.html  dao.html  index.html
result/css/: encoins.webflow-extra.css  encoins.webflow.css  encs-3bb243bf2a8520d5a66d-f872d515808be.webflow.css  noscript.css  webflow.css
result/ispo/: 319.txt  320.txt  321.txt  322.txt  323.txt  324.txt  325.txt  326.txt  327.txt  328.txt  329.txt  330.txt  331.txt  332.txt  333.txt  334.txt  335.txt  336.txt  337.txt  338.txt  339.txt  340.txt  341.txt  342.txt  343.txt  344.txt  345.txt  346.txt  347.txt  348.txt  349.txt  350.txt  351.txt  352.txt  353.txt  354.txt  355.txt  356.txt  357.txt  358.txt  (+39 more)
result/js/: CSL.js  Common.js  ENCOINS.js  Lucid.js  Webpage.js  cip14.js  webflow.js
result/js/CSL/: cardano_serialization_lib.d.ts  cardano_serialization_lib_bg.js  package.json
result/js/crypto/: decrypt_crypto_js.js  fallback.js  native_crypto.js  utils.js
src/: AppWidget.hs  JS.hs  Language.hs  Main.hs
src/App/: Common.hs
src/Backend/: Client.hs  EncoinsTx.hs  Environment.hs  Requests.hs  Status.hs  Types.hs  Wallet.hs
src/Backend/Protocol/: Setup.hs  TxValidity.hs  Utility.hs
src/Backend/Servant/: Client.hs  Requests.hs
src/ENCOINS/: App.hs  Body.hs  Frontend.hs  Head.hs  Website.hs
src/ENCOINS/App/: Body.hs  Widgets.hs
src/ENCOINS/App/Protocol/: TxValidity.hs
src/ENCOINS/App/Widgets/: Basic.hs  Coin.hs  CoinEntry.hs  ConnectWindow.hs  ISPO.hs  ImportWindow.hs  InputAddressWindow.hs  MainTabs.hs  MainWindow.hs  Navbar.hs  PasswordWindow.hs  SendRequestButton.hs  SendToWalletWindow.hs  TabsSelection.hs  TransactionBalance.hs  WelcomeWindow.hs
src/ENCOINS/Common/: Events.hs  Utils.hs
src/ENCOINS/Common/Widgets/: Advanced.hs  Basic.hs  SelectInput.hs
src/ENCOINS/Core/: Bulletproofs.hs  Types.hs
src/ENCOINS/DAO/: Body.hs  Polls.hs
src/ENCOINS/DAO/Widgets/: PollWidget.hs
src/ENCOINS/Frontend/: Body.hs  Head.hs
src/ENCOINS/Website/: Body.hs  Head.hs  Widgets.hs
src/ENCOINS/Website/Widgets/: Advanced.hs  Basic.hs  Footer.hs  ISPO.hs  ISPOPage.hs  LandingPage.hs  Navbar.hs  Resourses.hs
src/JS/: App.hs  DAO.hs  Types.hs  WebPage.hs  Website.hs
src/WebPage/: Basic.hs
src/Widgets/: App.hs  Basic.hs  Buttons.hs  CoinEntry.hs  Events.hs  Utils.hs
