cabal-version:       2.4

name:                encoins-frontend
version:             0.1.0.0
build-type:          Simple

maintainer:          team@encoins.io

executable encoins-frontend
  main-is:             Main.hs
  hs-source-dirs:      src

  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-unrecognised-pragmas

  if impl(ghcjs)
    ghc-options:      -dedupe

  other-modules:    
                      Backend.Client
                    , Backend.EncoinsTx
                    , Backend.Requests
                    , ENCOINS.App.Widgets.ISPO
                    , ENCOINS.Frontend
                    , ENCOINS.Frontend.Head
                    , ENCOINS.Frontend.Body
                    , ENCOINS.Website.Widgets
                    , ENCOINS.Website.Widgets.Basic
                    , ENCOINS.Website.Widgets.Footer
                    , ENCOINS.Website.Widgets.ISPO
                    , ENCOINS.Website.Widgets.LandingPage
                    , ENCOINS.Website.Widgets.Navbar
                    , ENCOINS.Website.Widgets.Resourses
                    , Widgets.App
                    , Widgets.Basic
                    , Widgets.CoinEntry
                    , Widgets.Utils
                    , JS
                    , JS.App
                    , JS.Types
                    , JS.WebPage
                    , Language
                    , Reflex.ScriptDependent

  build-depends:      base >=4.7
                    , aeson
                    , base16-bytestring
                    , bytestring
                    , containers
                    , encoins-bulletproofs
                    , extra
                    , file-embed
                    , ghcjs-dom
                    , hex-text
                    , http-api-data
                    , ilist
                    , jsaddle
                    , plutus-tx-extra
                    , plutus-tx-js
                    , random
                    , reflex-dom
                    , reflex-dom-core
                    , servant
                    , servant-reflex
                    , stm
                    , text
                    , time
                    , tuple
                    , uuid
                    , witherable
  if impl(ghcjs)
    build-depends: ghcjs-base   -any


  default-extensions: AllowAmbiguousTypes
                    , BangPatterns
                    , BlockArguments
                    , ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , DerivingStrategies
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , NamedFieldPuns
                    , OverloadedLabels
                    , OverloadedStrings
                    , PolyKinds
                    , QuasiQuotes
                    , RankNTypes
                    , RecordWildCards
                    , RecursiveDo
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances
                    , ViewPatterns
