cabal-version:       3.0

name:                encoins-frontend
version:             0.1.0.0
build-type:          Simple

author:             Vladimir Sinyakov
maintainer:         team@encoins.io

library
  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-unrecognised-pragmas
  exposed-modules:
    Backend.EncoinsTx,
    Backend.Servant.Client,
    Backend.Servant.Requests,
    Backend.Status,
    Backend.Types,
    Backend.Wallet,
    ENCOINS.App,
    ENCOINS.App.Body,
    ENCOINS.App.Widgets,
    ENCOINS.App.Widgets.Basic,
    ENCOINS.App.Widgets.Coin,
    ENCOINS.App.Widgets.ConnectWindow,
    ENCOINS.App.Widgets.ImportWindow,
    ENCOINS.App.Widgets.ISPO,
    ENCOINS.App.Widgets.MainWindow,
    ENCOINS.App.Widgets.Navbar,
    ENCOINS.App.Widgets.PasswordWindow,
    ENCOINS.App.Widgets.WelcomeWindow,
    ENCOINS.Common.Widgets.Advanced,
    ENCOINS.Common.Widgets.Basic,
    ENCOINS.Website,
    ENCOINS.Website.Body,
    ENCOINS.Website.Head,
    ENCOINS.Website.Widgets,
    ENCOINS.Website.Widgets.Basic,
    ENCOINS.Website.Widgets.Footer,
    ENCOINS.Website.Widgets.ISPO,
    ENCOINS.Website.Widgets.LandingPage,
    ENCOINS.Website.Widgets.Navbar,
    ENCOINS.Website.Widgets.Resourses,
    JS.App,
    JS.Website,
    Language,
    Reflex.ScriptDependent,
    Widgets.Basic,
    Widgets.Events,
    Widgets.Utils
  build-depends:
    base                      >=4.7,
    aeson                      -any,
    base16-bytestring          -any,
    bytestring                 -any,
    containers                 -any,
    csl-types                  -any,
    encoins-bulletproofs       -any,
    extra                      -any,
    file-embed                 -any,
    ghcjs-dom                  -any,
    hex-text                   -any,
    http-api-data              -any,
    ilist                      -any,
    jsaddle                    -any,
    plutus-tx-extra            -any,
    plutus-tx-js               -any,
    random                     -any,
    reflex-dom                 -any,
    reflex-dom-core            -any,
    servant                    -any,
    servant-checked-exceptions -any,
    servant-reflex             -any,
    stm                        -any,
    text                       -any,
    time                       -any,
    tuple                      -any,
    uuid                       -any,
    witherable                 -any
  if impl(ghcjs)
    build-depends:
      ghcjs-base               -any
  default-extensions:
    AllowAmbiguousTypes,
    BangPatterns,
    BlockArguments,
    ConstraintKinds,
    DataKinds,
    DeriveGeneric,
    DerivingStrategies,
    DuplicateRecordFields,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTs,
    LambdaCase,
    NamedFieldPuns,
    OverloadedLabels,
    OverloadedStrings,
    PolyKinds,
    QuasiQuotes,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TemplateHaskell,
    TupleSections,
    TypeApplications,
    TypeFamilies,
    TypeOperators,
    UndecidableInstances,
    ViewPatterns
  hs-source-dirs:      src

executable encoins-website
  main-is:             Website.hs
  hs-source-dirs:      apps

  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-unrecognised-pragmas

  if impl(ghcjs)
    ghc-options:      -dedupe
  build-depends:
    base                       >=4.7,
    encoins-frontend            -any
  if impl(ghcjs)
    build-depends:
      ghcjs-base                -any

executable encoins-app
  main-is:             App.hs
  hs-source-dirs:      apps

  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-unrecognised-pragmas

  if impl(ghcjs)
    ghc-options:      -dedupe
  build-depends:
    base                       >=4.7,
    encoins-frontend            -any
  if impl(ghcjs)
    build-depends:
      ghcjs-base                -any
