cabal-version: 3.0
name:          encoins-frontend
version:       0.1.2.0 
build-type:    Simple
author:
  Vladimir Sinyakov
  Catherine Galkina

maintainer:    team@encoins.io

library
  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-unrecognised-pragmas
  other-modules:      Paths_encoins_frontend
  exposed-modules:
    Backend.EncoinsTx
    Backend.Environment
    Backend.Protocol.Fees
    Backend.Protocol.Setup
    Backend.Protocol.StrongTypes
    Backend.Protocol.TxValidity
    Backend.Protocol.Types
    Backend.Protocol.Utility
    Backend.Servant.Client
    Backend.Servant.Requests
    Backend.Status
    Backend.Utility
    Backend.Wallet
    Config.Config
    ENCOINS.App
    ENCOINS.App.Body
    ENCOINS.App.Widgets.Basic
    ENCOINS.App.Widgets.Cloud
    ENCOINS.App.Widgets.CloudWindow
    ENCOINS.App.Widgets.Coin
    ENCOINS.App.Widgets.ConnectWindow
    ENCOINS.App.Widgets.ImportWindow
    ENCOINS.App.Widgets.InputAddressWindow
    ENCOINS.App.Widgets.MainTabs
    ENCOINS.App.Widgets.MainWindow
    ENCOINS.App.Widgets.Migration
    ENCOINS.App.Widgets.Navbar
    ENCOINS.App.Widgets.Notification
    ENCOINS.App.Widgets.PasswordWindow
    ENCOINS.App.Widgets.ReEncryption
    ENCOINS.App.Widgets.SendRequestButton
    ENCOINS.App.Widgets.SendToWalletWindow
    ENCOINS.App.Widgets.TabsSelection
    ENCOINS.App.Widgets.TransactionBalance
    ENCOINS.App.Widgets.WelcomeWindow
    ENCOINS.Common.Cache
    ENCOINS.Common.Events
    ENCOINS.Common.Head
    ENCOINS.Common.Language
    ENCOINS.Common.Utils
    ENCOINS.Common.Widgets.Advanced
    ENCOINS.Common.Widgets.Basic
    ENCOINS.Common.Widgets.Connect
    ENCOINS.Common.Widgets.JQuery
    ENCOINS.Common.Widgets.MoreMenu
    ENCOINS.Common.Widgets.SelectInput
    ENCOINS.Common.Widgets.Wallet
    ENCOINS.DAO
    ENCOINS.DAO.Body
    ENCOINS.DAO.PollResults
    ENCOINS.DAO.Polls
    ENCOINS.DAO.Widgets.DelegateWindow
    ENCOINS.DAO.Widgets.DelegateWindow.RelayNames
    ENCOINS.DAO.Widgets.Navbar
    ENCOINS.DAO.Widgets.PollWidget
    ENCOINS.DAO.Widgets.RelayTable
    ENCOINS.DAO.Widgets.StatusWidget
    ENCOINS.Website
    ENCOINS.Website.Body
    ENCOINS.Website.Head
    ENCOINS.Website.Widgets.Basic
    ENCOINS.Website.Widgets.Footer
    ENCOINS.Website.Widgets.LandingPage
    ENCOINS.Website.Widgets.Navbar
    ENCOINS.Website.Widgets.Resourses
    JS.App
    JS.DAO
    JS.Website
    Reflex.ScriptDependent

  build-depends:
    , aeson                       
    , aeson-casing
    , array
    , attoparsec
    , base                        
    , base16-bytestring           
    , bytestring                  
    , containers                  
    , csl-types
    , encoins-bulletproofs
    , extra                       
    , file-embed                  
    , ghcjs-dom                   
    , hashing
    , hex-text                    
    , http-api-data               
    , ilist                       
    , jsaddle                     
    , jsaddle-dom                 
    , keccak
    , lens
    , plutus-tx-extra
    , plutus-tx-js
    , random                      
    , raw-strings-qq
    , reflex-dom                  
    , reflex-dom-core             
    , regex-tdfa
    , semialign
    , servant                     
    , servant-checked-exceptions  
    , servant-reflex              
    , stm                         
    , text                        
    , these
    , time                        
    , tuple                       
    , uuid
    , vector
    , witherable                  

  if impl(ghcjs)
    build-depends: ghcjs-base ^>=0.2.1.0

  if flag(predao)
    cpp-options: -DPREDAO

  if flag(preapp)
    cpp-options: -DPREAPP

  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  hs-source-dirs:     src

executable encoins-website
  main-is:          Website.hs
  hs-source-dirs:   apps
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-unrecognised-pragmas

  if impl(ghcjs)
    ghc-options: -dedupe

  build-depends:
    , base              ^>=4.14.3.0
    , encoins-frontend

  if impl(ghcjs)
    build-depends: ghcjs-base ^>=0.2.1.0

executable encoins-app
  main-is:          App.hs
  hs-source-dirs:   apps
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-unrecognised-pragmas

  if impl(ghcjs)
    ghc-options: -dedupe

  build-depends:
    , base              ^>=4.14.3.0
    , encoins-frontend

  if impl(ghcjs)
    build-depends: ghcjs-base ^>=0.2.1.0

executable encoins-dao
  main-is:          DAO.hs
  hs-source-dirs:   apps
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-unrecognised-pragmas

  if impl(ghcjs)
    ghc-options: -dedupe

  build-depends:
    , base              ^>=4.14.3.0
    , encoins-frontend

  if impl(ghcjs)
    build-depends: ghcjs-base ^>=0.2.1.0

test-suite frontend
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:
    , base              ^>=4.14.3.0
    , bytestring
    , encoins-frontend
    , hspec
    , text

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-extensions: OverloadedStrings

flag predao
  description: Configure dao in test preprod mode
  default:     False

flag preapp
  description: Configure app in test preprod mode
  default:     False
